--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,7 +1,6 @@
 @use "../../assets/sass/_variables.scss" as *;
 
 .nav-section{
-    min-height: 87.5vh;
     height: 100%;
     padding: 1rem;
 
